Add syntax highlighting
* Add <script> and stylesheet tags to header.html and footer.html to
  support syntax highlighting using highlight.js
* So far, I added support for syntax highlighting Python and R.
* However, I think (many) other languages are also supported by default
  and they are identified by highlight.js and so explicitly mentioning
  the code type in the code block is not always necessary.

--- a/themes/kiss/layouts/partials/header.html
+++ b/themes/kiss/layouts/partials/header.html
@@ -15,5 +15,6 @@
 {{- range .Site.Params.Assets.customCSS -}}
 <link rel='stylesheet' href='{{ . | relURL }}'>
 {{- end -}}
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
 </head>
 <body>
