--- a/themes/kiss/layouts/partials/footer.html
+++ b/themes/kiss/layouts/partials/footer.html
@@ -10,6 +10,12 @@
 {{ template "_internal/google_analytics_async.html" . }}
 {{ end }}
 
+      
+      
+      <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/r.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/python.min.js"></script>
+
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({ tex2jax: { inlineMath: [['$','$'], ['\\(','\\)']] } });
     </script>
@@ -18,6 +24,7 @@
 	    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>
 
+    <script>hljs.initHighlightingOnLoad();</script>
 
 </body>
 
